# RegEx

./: AmfReader.cpp  AmfReader.h  CMakeLists.txt  CMakeLists.txt.user.a12bd53  CMakeLists.txt.user.b5e6587  FcpPkgReader.h  FcpPkgReaderStructs.h  P_SQ_640_760.pst  a1.cpp  a1.h  bga_test.pkg  commonstruct.cpp  commonstruct.h  defs.h  dpfreader.cpp  dpfreader.h  e3s.amf  e3s.dpf  e3s.fpt  elbrus3s.pkg  fcpamfdata.cpp  fcpamfdata.h  main.cpp  pkgparser.cpp  pkgparser.h  test_d2p.amf
